<?xml version="1.0" encoding="utf-8"?>
<!-- From https://www.toptal.com/android/android-customization-how-to-build-a-ui-component-that-does-what-you-want-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- date toolbar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <!-- prev button -->
        <ImageButton
            android:id="@+id/calendar_prev_button"
            android:layout_width="@dimen/next_button_height_width"
            android:layout_height="@dimen/next_button_height_width"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/backbutton"
            android:scaleType="centerCrop"
            android:background="@color/transparent"
            />

        <!-- date title -->

        <!-- next button -->
        <ImageButton
            android:id="@+id/calendar_next_button"
            android:layout_width="@dimen/next_button_height_width"
            android:layout_height="@dimen/next_button_height_width"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/nextbutton"
            android:scaleType="centerCrop"
            android:background="@color/transparent"
            />

        <TextView
            android:id="@+id/calendar_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="#222222"
            android:text="current date"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <!-- days header -->
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/sunday_abbr"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/monday_abbr"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/tuesday_abbr"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/wednesday_abbr"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/thursday_abbr"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/friday_abbr"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textColor="#222222"
            android:text="@string/saturday_abbr"/>


    </LinearLayout>

    <!-- days view -->
    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:numColumns="7"/>
</LinearLayout>